--- a/CAP_4720_CloudRenderer.vcxproj.filters
+++ b/CAP_4720_CloudRenderer.vcxproj.filters
@@ -1,17 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="BuildExternal">
       <UniqueIdentifier>{72f902f7-7400-4d77-bea6-8f4d00bd1273}</UniqueIdentifier>
@@ -46,11 +38,11 @@
     <Filter Include="Renderable">
       <UniqueIdentifier>{9e0e3b98-5ca6-42b0-8d72-2f5fcb6fe623}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Main">
+      <UniqueIdentifier>{3ee60d18-da2a-48ae-ac34-04a9c04a3e55}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="BuildExternal\glad.c">
       <Filter>BuildExternal</Filter>
     </ClCompile>
@@ -81,44 +73,47 @@
     <ClCompile Include="Engine\utils.cpp">
       <Filter>GLUtility</Filter>
     </ClCompile>
-    <ClCompile Include="imgui\imgui.cpp">
-      <Filter>GUI\ImGUI Implementation</Filter>
+    <ClCompile Include="Main.cpp">
+      <Filter>Main</Filter>
     </ClCompile>
-    <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_glfw.cpp">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_opengl3.cpp">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClCompile>
-    <ClCompile Include="DrawableObjects\DrawableClouds.cpp">
+    <ClCompile Include="Renderable\Drawable.cpp">
       <Filter>Renderable</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableObjects\Drawable.cpp">
+    <ClCompile Include="Renderable\DrawableClouds.cpp">
       <Filter>Renderable</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableObjects\GUI.cpp">
+    <ClCompile Include="Renderable\PlaneCounter.cpp">
+      <Filter>Renderable</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderable\ReflectablePlane.cpp">
+      <Filter>Renderable</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderable\Skybox.cpp">
+      <Filter>Renderable</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderable\VolumetricClouds.cpp">
+      <Filter>Renderable</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderable\GUI.cpp">
       <Filter>GUI\GUI</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableObjects\PlaneCounter.cpp">
-      <Filter>Renderable</Filter>
+    <ClCompile Include="Include\imgui\imgui.cpp">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableObjects\ReflectablePlane.cpp">
-      <Filter>Renderable</Filter>
+    <ClCompile Include="Include\imgui\imgui_demo.cpp">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableObjects\Skybox.cpp">
-      <Filter>Renderable</Filter>
+    <ClCompile Include="Include\imgui\imgui_draw.cpp">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableObjects\VolumetricClouds.cpp">
-      <Filter>Renderable</Filter>
+    <ClCompile Include="Include\imgui\imgui_impl_glfw.cpp">
+      <Filter>GUI\ImGUI Implementation</Filter>
+    </ClCompile>
+    <ClCompile Include="Include\imgui\imgui_impl_opengl3.cpp">
+      <Filter>GUI\ImGUI Implementation</Filter>
+    </ClCompile>
+    <ClCompile Include="Include\imgui\imgui_widgets.cpp">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -143,30 +138,6 @@
     <ClInclude Include="Engine\Utils.hpp">
       <Filter>GLUtility</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imconfig.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_glfw.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_opengl3.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>GUI\ImGUI Implementation</Filter>
-    </ClInclude>
     <ClInclude Include="Include\Camera.hpp">
       <Filter>Camera</Filter>
     </ClInclude>
@@ -179,35 +150,53 @@
     <ClInclude Include="Include\stb_image_write.h">
       <Filter>BuildExternal</Filter>
     </ClInclude>
-    <ClInclude Include="Include\mesh.h">
+    <ClInclude Include="Renderable\Drawable.hpp">
       <Filter>Renderable</Filter>
     </ClInclude>
-    <ClInclude Include="Include\model.h">
+    <ClInclude Include="Renderable\DrawableClouds.hpp">
       <Filter>Renderable</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\DrawableClouds.hpp">
+    <ClInclude Include="Renderable\PlaneCounter.hpp">
       <Filter>Renderable</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\Drawable.hpp">
+    <ClInclude Include="Renderable\ReflectablePlane.hpp">
       <Filter>Renderable</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\GUI.hpp">
+    <ClInclude Include="Renderable\Scene.hpp">
+      <Filter>Renderable</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderable\Skybox.hpp">
+      <Filter>Renderable</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderable\VolumetricClouds.hpp">
+      <Filter>Renderable</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderable\GUI.hpp">
       <Filter>GUI\GUI</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\PlaneCounter.hpp">
-      <Filter>Renderable</Filter>
+    <ClInclude Include="Include\imgui\imconfig.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\ReflectablePlane.hpp">
-      <Filter>Renderable</Filter>
+    <ClInclude Include="Include\imgui\imgui.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\Skybox.hpp">
-      <Filter>Renderable</Filter>
+    <ClInclude Include="Include\imgui\imgui_impl_glfw.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\VolumetricClouds.hpp">
-      <Filter>Renderable</Filter>
+    <ClInclude Include="Include\imgui\imgui_impl_opengl3.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClInclude>
-    <ClInclude Include="DrawableObjects\Scene.hpp">
-      <Filter>Renderable</Filter>
+    <ClInclude Include="Include\imgui\imgui_internal.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\imgui\imstb_rectpack.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\imgui\imstb_textedit.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\imgui\imstb_truetype.h">
+      <Filter>GUI\ImGUI Implementation</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
