--- a/CAP_4720_CloudRenderer.vcxproj
+++ b/CAP_4720_CloudRenderer.vcxproj
@@ -152,8 +152,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BuildExternal\glad.c" />
-    <ClCompile Include="BuildExternal\stb_image.cpp" />
-    <ClCompile Include="BuildExternal\stb_image_write.cpp" />
     <ClCompile Include="Engine\BaseShader.cpp" />
     <ClCompile Include="Engine\buffers.cpp" />
     <ClCompile Include="Engine\PostProcess.cpp" />
@@ -167,6 +165,8 @@
     <ClCompile Include="Include\imgui\imgui_impl_glfw.cpp" />
     <ClCompile Include="Include\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Include\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Include\stb\stb_image.cpp" />
+    <ClCompile Include="Include\stb\stb_image_write.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Renderable\Drawable.cpp" />
     <ClCompile Include="Renderable\DrawableClouds.cpp" />
@@ -193,8 +193,8 @@
     <ClInclude Include="Include\imgui\imstb_rectpack.h" />
     <ClInclude Include="Include\imgui\imstb_textedit.h" />
     <ClInclude Include="Include\imgui\imstb_truetype.h" />
-    <ClInclude Include="Include\stb_image.h" />
-    <ClInclude Include="Include\stb_image_write.h" />
+    <ClInclude Include="Include\stb\stb_image.h" />
+    <ClInclude Include="Include\stb\stb_image_write.h" />
     <ClInclude Include="Renderable\Drawable.hpp" />
     <ClInclude Include="Renderable\DrawableClouds.hpp" />
     <ClInclude Include="Renderable\GUI.hpp" />
