--- a/CAP_4720_CloudRenderer.vcxproj.filters
+++ b/CAP_4720_CloudRenderer.vcxproj.filters
@@ -46,12 +46,6 @@
     <ClCompile Include="BuildExternal\glad.c">
       <Filter>BuildExternal</Filter>
     </ClCompile>
-    <ClCompile Include="BuildExternal\stb_image.cpp">
-      <Filter>BuildExternal</Filter>
-    </ClCompile>
-    <ClCompile Include="BuildExternal\stb_image_write.cpp">
-      <Filter>BuildExternal</Filter>
-    </ClCompile>
     <ClCompile Include="Engine\PostProcess.cpp">
       <Filter>Shaders\PostProcess</Filter>
     </ClCompile>
@@ -115,6 +109,12 @@
     <ClCompile Include="Include\imgui\imgui_widgets.cpp">
       <Filter>GUI\ImGUI Implementation</Filter>
     </ClCompile>
+    <ClCompile Include="Include\stb\stb_image.cpp">
+      <Filter>BuildExternal</Filter>
+    </ClCompile>
+    <ClCompile Include="Include\stb\stb_image_write.cpp">
+      <Filter>BuildExternal</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\PostProcess.hpp">
@@ -140,12 +140,6 @@
     </ClInclude>
     <ClInclude Include="Include\Camera.hpp">
       <Filter>Camera</Filter>
-    </ClInclude>
-    <ClInclude Include="Include\stb_image.h">
-      <Filter>BuildExternal</Filter>
-    </ClInclude>
-    <ClInclude Include="Include\stb_image_write.h">
-      <Filter>BuildExternal</Filter>
     </ClInclude>
     <ClInclude Include="Renderable\Drawable.hpp">
       <Filter>Renderable</Filter>
@@ -194,6 +188,12 @@
     </ClInclude>
     <ClInclude Include="Include\imgui\imstb_truetype.h">
       <Filter>GUI\ImGUI Implementation</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\stb\stb_image.h">
+      <Filter>BuildExternal</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\stb\stb_image_write.h">
+      <Filter>BuildExternal</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
