--- a/CAP_4720_CloudRenderer.vcxproj
+++ b/CAP_4720_CloudRenderer.vcxproj
@@ -205,6 +205,24 @@
     <ClInclude Include="Renderable\Skybox.hpp" />
     <ClInclude Include="Renderable\VolumetricClouds.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\clouds_post.frag" />
+    <None Include="shaders\copyFrame.frag" />
+    <None Include="shaders\perlinworley.comp" />
+    <None Include="shaders\PlaneCounter.frag" />
+    <None Include="shaders\PlaneCounter.vert" />
+    <None Include="shaders\post_processing.frag" />
+    <None Include="shaders\screen.vert" />
+    <None Include="shaders\sky.frag" />
+    <None Include="shaders\skyboxVert.vert" />
+    <None Include="shaders\ReflectablePlane.frag" />
+    <None Include="shaders\ReflectablePlane.vert" />
+    <None Include="shaders\textShader.frag" />
+    <None Include="shaders\textShader.vert" />
+    <None Include="shaders\volumetric_clouds.comp" />
+    <None Include="shaders\weather.comp" />
+    <None Include="shaders\worley.comp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
