--- a/CAP_4720_CloudRenderer.vcxproj.filters
+++ b/CAP_4720_CloudRenderer.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClCompile Include="Engine\buffers.cpp">
       <Filter>GLUtility</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\texture.cpp">
+    <ClCompile Include="Engine\Texture.cpp">
       <Filter>GLUtility</Filter>
     </ClCompile>
     <ClCompile Include="Engine\utils.cpp">
